src/objects/Portfolio_Tab__mdt.object
<CustomObject>
    <fields>
        <fullName>Graph_Type__c</fullName>
        <label>Graph Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                    <default>true</default>
                    <label>Bar</label>
                </value>
                <value>
                    <fullName>Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_Item_Name__c</fullName>
        <label>Line Item Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Column__c</fullName>
        <label>Portfolio Column</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                    <default>true</default>
                    <label>Currency</label>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Portfolio Tab</label>
    <pluralLabel>Portfolio Tab</pluralLabel>
</CustomObject>